[tool.poetry]
name = "congenial-tribble"
version = "0.1.0"
description = ""
authors = ["Tim Chan <tim@chan.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmesh = {extras = ["postgres", "web", "github"], version = "^0.46.2"}

# scripts
loguru = "^0.7.0"
typer = "^0.9.0"
ruamel-yaml = "^0.17.32"

# ci
dagger-io = "^0.6.2"
yoyo-migrations = "^8.2.0"
pygithub = "^1.59.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.274"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
force_single_line = "True"

[tool.ruff]
line-length = 120
